# project-vega

./: .dockerignore  .gitignore  Dockerfile  Makefile  PROJECT_VEGA_SKILL.md  README.md  SKILL.md  agent_platform_runbook.md  codebase_detailed_guide.md  main.py  pyproject.toml  requirements-ingestion.txt  requirements.txt
.github/workflows/: ci.yml
adapters/aws/: bedrock_kb_manager.py  boto3_factory.py  cognito.py  dynamodb.py  jwt_verifier.py
agents/: prompts.py  underwriting_agent.py
agents/tools/: retriever.py
app/: main.py
app/api/: routes.py
app/core/: logger.py  prompts.py
app/dependencies/: identity.py  services.py  settings.py
app/routers/: agent_router.py  auth_router.py  kb_router.py  session_router.py
app/services/: bedrock_kb_agent.py
control_plane/: agent_registry.py  deployment_manager.py  execution_profile_repository.py  kb_manager.py  memory_manager.py
domain/: models.py
entrypoints/: agent_gateway.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
profiles/: coaction-underwriting.json  vega_binding_authority_bot.json
runtime/: base_agent.py  context_builder.py  host_adapter.py  orchestrator.py  response_composer.py  strands_agent.py
scripts/: cleanup_data.py  kb_chunking_pipeline.py  kb_pipeline.py  kb_raw_retrieval_eval.py  platform_bootstrap.py  pre_push_check.py  profile_dynamodb_sync.py  query.py  split_manual.py
services/: agent_service.py  audit.py  authorization.py  guardrails.py  memory.py  model_gateway.py  telemetry.py  tool_gateway.py
ui/: gradio_app.py
(+46 files in other folders)
